feb 26 prod update

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -42,10 +42,10 @@
    "outputs": [],
    "source": [
     "## Setup connection to DWH\n",
-    "# customer = 'KIVA'\n",
-    "# schema = 'KIVA_PROD.OPTIML'\n",
-    "customer = 'OPTIML' # Use this for testing\n",
-    "schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
+    "customer = 'KIVA'\n",
+    "schema = 'KIVA_PROD.OPTIML'\n",
+    "# customer = 'OPTIML' # Use this for testing\n",
+    "# schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
     "username = customer + '_USERNAME'\n",
     "password = customer + '_PASSWORD'\n",
     "account = customer + '_ACCOUNT'\n",
@@ -93,10 +93,10 @@
     "\n",
     "# Initialize dates\n",
     "import datetime \n",
-    "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
-    "# sdate = edate - datetime.timedelta(days=8)\n",
-    "edate = datetime.datetime.strptime('2022-10-04', '%Y-%m-%d').date()\n",
-    "sdate = datetime.datetime.strptime('2022-09-29', '%Y-%m-%d').date()\n",
+    "edate = datetime.date.today() - datetime.timedelta(days=1)\n",
+    "sdate = edate - datetime.timedelta(days=6)\n",
+    "# edate = datetime.datetime.strptime('2022-10-04', '%Y-%m-%d').date()\n",
+    "# sdate = datetime.datetime.strptime('2022-09-29', '%Y-%m-%d').date()\n",
     "# edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
     "# sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
     "# edate = str(edate)\n",
@@ -677,504 +677,6 @@
     "    \n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Queries at peak usage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize query library\n",
-    "from optiml.backend.query_profile import QueryProfile\n",
-    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "qqlib = QueryProfile(connection, schema)\n",
-    "whlib = WarehouseProfile(connection, schema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Get queries at usage peaks\n",
-    "df = qqlib.get_queries(start_date='2022-10-01 12:00:00',\\\n",
-    "                       end_date='2022-10-01 19:00:00',\\\n",
-    "                       user='FIVETRAN_USER',\\\n",
-    "                       wh=\"PROD_WH\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Get warehouse events at peak usage\n",
-    "df_events = whlib.wh_events(start_datetime='2022-10-01 00:00:00',\\\n",
-    "                     end_datetime='2022-10-02 00:00:00')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(df_events)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_events[df_events[\"warehouse_name\"]==\"PROD_WH\"].sort_values(\"timestamp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = whlib.wh_credits_per_hour(start_datetime='2022-10-01 12:00:00',\\\n",
-    "                     end_datetime='2022-10-01 20:00:00')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.sort_values(\"start_time\", inplace=True)\n",
-    "df.reset_index(inplace=True, drop=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df,\\\n",
-    "              x=\"start_time\",\\\n",
-    "              y=\"credits_used_compute\",\\\n",
-    "              color=\"warehouse_name\",\\\n",
-    "              color_discrete_sequence=color_scheme,\\\n",
-    "             markers=True)\n",
-    "fig.update_layout(\n",
-    "    title={\n",
-    "        'text': \"Timeseries of cost by partner tools\",\n",
-    "        'y':0.95,\n",
-    "        'x':0.5,\n",
-    "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'},\n",
-    "    xaxis_title=\"Hourly start time (UTC)\",\n",
-    "    yaxis_title=\"Credits used (approx.)\"\n",
-    ")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Further possible actions on this notebook"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "\n",
-    "* Cost by tasks if that exists - doesnt seem to for Kiva - would like to understand this usage pattern\n",
-    "* Cost by partner tools takes ~3 min for each run for 1 week. Needs to run twice during an analysis. Does this require mitigation? All other queries run in a few sec. each.\n",
-    "* Provide recommendation for total resource monitor - weekly\n",
-    "* Provide recommendation for resource monitor by day of the week:\n",
-    "    * Warehouse\n",
-    "    * Overall\n",
-    "* Next set of notebooks\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Backtesting resource monitor based on data from 2022-10-05 to 2022-10-12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Get current week compute data\n",
-    "current_week_start = datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
-    "current_week_end = datetime.strptime('2022-10-12', '%Y-%m-%d').date()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timedelta\n",
-    "TRAINING_LENGTH = 30\n",
-    "training_start = current_week_start - timedelta(TRAINING_LENGTH + 1)\n",
-    "training_end = current_week_start - timedelta(1)\n",
-    "# training_start, training_end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_wh, resource_monitor = get_resource_monitor_values(training_start, training_end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_current_week = cqlib.cost_of_compute_ts(current_week_start, current_week_end)\n",
-    "df_current_week.drop(df_current_week.loc[df_current_week['warehouse_name']==\"CLOUD_SERVICES_ONLY\"].index, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Get the aggregated credit usage by day\n",
-    "df_current_week_by_wh_day = df_current_week.groupby([\n",
-    "                 pd.Grouper(key='hourly_start_time', axis=0, freq='D', sort=True),\n",
-    "                 pd.Grouper('warehouse_name')\n",
-    "               ]).sum()\n",
-    "\n",
-    "df_current_week_by_wh_day.reset_index(inplace=True)\n",
-    "df_current_week_by_wh_day.rename(columns={\"hourly_start_time\": \"day\"}, errors=\"raise\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_current_week_by_wh_day = df_current_week_by_wh_day.merge(resource_monitor,\\\n",
-    "                                                            left_on='warehouse_name',\\\n",
-    "                                                            right_on='warehouse_name',\\\n",
-    "                                                            suffixes=('_left', '_right'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for wh in df_current_week_by_wh_day[\"warehouse_name\"].unique():\n",
-    "    print(wh)\n",
-    "\n",
-    "    f = make_subplots()\n",
-    "    trace1 = go.Bar(\n",
-    "            x=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"day\"],\n",
-    "            y=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"credits\"],\n",
-    "\n",
-    "        )\n",
-    "\n",
-    "    \n",
-    "    trace2 = go.Scatter(\n",
-    "        x=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"day\"],\n",
-    "        y=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"credits_three_sigma_plus\"],\n",
-    "        mode='lines+markers'\n",
-    "        )\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    f.add_trace(trace1, secondary_y=False)\n",
-    "    f.update_layout(barmode='group')\n",
-    "    f.add_trace(trace2, secondary_y=False)\n",
-    "    \n",
-    "    f.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Checking against warehouse timeseries data for credit usage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = cqlib.cost_by_wh_ts(current_week_start, current_week_end)\n",
-    "## Plot timeseries\n",
-    "df_by_wh_ts = df.groupby(['warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
-    "fig.update_layout(\n",
-    "    title={\n",
-    "        'text': \"Timeseries of cost by warehouse\",\n",
-    "        'y':0.95,\n",
-    "        'x':0.5,\n",
-    "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'},\n",
-    "    xaxis_title=\"Hourly start time (UTC)\",\n",
-    "    yaxis_title=\"Credits used\"\n",
-    ")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Backtesting resource monitor based on data from 2022-09-27 to 2022-10-04"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Get current week compute data\n",
-    "current_week_start = datetime.strptime('2022-09-27', '%Y-%m-%d').date()\n",
-    "current_week_end = datetime.strptime('2022-10-04', '%Y-%m-%d').date()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timedelta\n",
-    "TRAINING_LENGTH = 30\n",
-    "training_start = current_week_start - timedelta(TRAINING_LENGTH + 1)\n",
-    "training_end = current_week_start - timedelta(1)\n",
-    "# training_start, training_end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_wh, resource_monitor = get_resource_monitor_values(training_start, training_end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_current_week = cqlib.cost_of_compute_ts(current_week_start, current_week_end)\n",
-    "df_current_week.drop(df_current_week.loc[df_current_week['warehouse_name']==\"CLOUD_SERVICES_ONLY\"].index, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Get the aggregated credit usage by day\n",
-    "df_current_week_by_wh_day = df_current_week.groupby([\n",
-    "                 pd.Grouper(key='hourly_start_time', axis=0, freq='D', sort=True),\n",
-    "                 pd.Grouper('warehouse_name')\n",
-    "               ]).sum()\n",
-    "\n",
-    "df_current_week_by_wh_day.reset_index(inplace=True)\n",
-    "df_current_week_by_wh_day.rename(columns={\"hourly_start_time\": \"day\"}, errors=\"raise\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_current_week_by_wh_day = df_current_week_by_wh_day.merge(resource_monitor,\\\n",
-    "                                                            left_on='warehouse_name',\\\n",
-    "                                                            right_on='warehouse_name',\\\n",
-    "                                                            suffixes=('_left', '_right'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for wh in df_current_week_by_wh_day[\"warehouse_name\"].unique():\n",
-    "    print(wh)\n",
-    "\n",
-    "    f = make_subplots()\n",
-    "    trace1 = go.Bar(\n",
-    "            x=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"day\"],\n",
-    "            y=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"credits\"],\n",
-    "\n",
-    "        )\n",
-    "\n",
-    "    \n",
-    "    trace2 = go.Scatter(\n",
-    "        x=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"day\"],\n",
-    "        y=df_current_week_by_wh_day[df_current_week_by_wh_day[\"warehouse_name\"]==wh][\"credits_three_sigma_plus\"],\n",
-    "        mode='lines+markers'\n",
-    "        )\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    f.add_trace(trace1, secondary_y=False)\n",
-    "    f.update_layout(barmode='group')\n",
-    "    f.add_trace(trace2, secondary_y=False)\n",
-    "    \n",
-    "    f.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = cqlib.cost_by_wh_ts(current_week_start, current_week_end)\n",
-    "## Plot timeseries\n",
-    "df_by_wh_ts = df.groupby(['warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
-    "fig.update_layout(\n",
-    "    title={\n",
-    "        'text': \"Timeseries of cost by warehouse\",\n",
-    "        'y':0.95,\n",
-    "        'x':0.5,\n",
-    "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'},\n",
-    "    xaxis_title=\"Hourly start time (UTC)\",\n",
-    "    yaxis_title=\"Credits used\"\n",
-    ")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1199,13 +701,6 @@
   "vscode": {
    "interpreter": {
     "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
-   }
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "state": {},
-    "version_major": 2,
-    "version_minor": 0
    }
   }
  },
