--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -42,10 +42,10 @@
    "outputs": [],
    "source": [
     "## Setup connection to DWH\n",
-    "customer = 'KIVA'\n",
-    "schema = 'KIVA_PROD.OPTIML'\n",
-    "# customer = 'OPTIML' # Use this for testing\n",
-    "# schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
+    "# customer = 'KIVA'\n",
+    "# schema = 'KIVA_PROD.OPTIML'\n",
+    "customer = 'OPTIML' # Use this for testing\n",
+    "schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
     "username = customer + '_USERNAME'\n",
     "password = customer + '_PASSWORD'\n",
     "account = customer + '_ACCOUNT'\n",
@@ -93,12 +93,12 @@
     "\n",
     "# Initialize dates\n",
     "import datetime \n",
-    "edate = datetime.date.today() - datetime.timedelta(days=1)\n",
-    "sdate = edate - datetime.timedelta(days=6)\n",
+    "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
+    "# sdate = edate - datetime.timedelta(days=6)\n",
     "# edate = datetime.datetime.strptime('2022-10-04', '%Y-%m-%d').date()\n",
     "# sdate = datetime.datetime.strptime('2022-09-29', '%Y-%m-%d').date()\n",
-    "# edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
-    "# sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
+    "edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
+    "sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
     "# edate = str(edate)\n",
     "# sdate = str(sdate)\n",
     "\n",
