updating cost analysis

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -68,8 +68,6 @@
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
-    "import pickle\n",
-    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -90,6 +88,8 @@
     "# Initialize query library\n",
     "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
     "cqlib = CostProfile(connection, schema)\n",
+    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
+    "wqlib = WarehouseProfile(connection, schema)\n",
     "\n",
     "# Initialize dates\n",
     "import datetime \n",
