--- a/notebooks/kiva/prod/cost_analysis.ipynb
+++ b/notebooks/kiva/prod/cost_analysis.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Adding system path\n",
     "import sys, pathlib, os\n",
-    "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
+    "sys.path.append(str(pathlib.Path.cwd().parent.parent.parent))\n",
     "# sys.path"
    ]
   },
