--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Adding system path\n",
-    "import sys, pathlib\n",
+    "import sys, pathlib, os\n",
     "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
     "# sys.path"
    ]
@@ -41,21 +41,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up displays\n",
-    "from IPython.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "## Setup connection to DWH\n",
+    "# customer = 'KIVA'\n",
+    "# schema = 'KIVA_PROD.OPTIML'\n",
+    "customer = 'OPTIML' # Use this for testing\n",
+    "schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
+    "username = customer + '_USERNAME'\n",
+    "password = customer + '_PASSWORD'\n",
+    "account = customer + '_ACCOUNT'\n",
+    "warehouse = customer + '_WAREHOUSE'\n",
+    "account_type = \"standard\"\n",
     "\n",
+    "user = os.getenv(username)\n",
+    "password = os.getenv(password)\n",
+    "account = os.getenv(account)\n",
+    "warehouse = os.getenv(warehouse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Setup pandas\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
-    "import math\n",
-    "from plotly import tools\n",
+    "import pickle\n",
+    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from tabulate import tabulate\n",
     "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize connection to Snowflake and set analysis date\n",
+    "from optiml.connection import SnowflakeConnConfig\n",
+    "connection = SnowflakeConnConfig(username=user,password=password,accountname=account).create_connection()\n",
+    "\n",
+    "# Initialize query library\n",
+    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
+    "wqlib = WarehouseProfile(connection, schema)\n",
+    "from optiml.backend.cost_profile import CostProfile\n",
+    "cqlib = CostProfile(connection, schema)\n",
+    "\n",
+    "# Initialize dates\n",
+    "import datetime \n",
+    "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
+    "# sdate = edate - datetime.timedelta(days=8)\n",
+    "edate = datetime.datetime.strptime('2022-10-04', '%Y-%m-%d').date()\n",
+    "sdate = datetime.datetime.strptime('2022-09-29', '%Y-%m-%d').date()\n",
+    "# edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
+    "# sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
+    "# edate = str(edate)\n",
+    "# sdate = str(sdate)\n",
+    "\n",
+    "print('Customer:', customer)\n",
+    "print('Schema:', schema)\n",
+    "print(str(sdate), str(edate))"
    ]
   },
   {
@@ -76,27 +128,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize connection to Snowflake and set analysis date\n",
-    "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# Initialize local environment\n",
-    "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "# # Initialize connection to Snowflake and set analysis date\n",
+    "# from optiml.connection import SnowflakeConnConfig\n",
+    "# connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
+    "# # Initialize local environment\n",
+    "# import os\n",
+    "# cache_dir = os.path.expanduser('~/data/kiva')\n",
     "\n",
-    "# Analysis setup\n",
-    "sdate = '2022-09-28'\n",
-    "edate = '2022-10-12'\n",
-    "delta = 'hour'\n",
-    "company = 'KIV'\n",
-    "account_type = \"standard\"\n",
+    "# # Analysis setup\n",
+    "# sdate = '2022-09-28'\n",
+    "# edate = '2022-10-12'\n",
+    "# delta = 'hour'\n",
+    "# company = 'KIV'\n",
+    "# account_type = \"standard\"\n",
     "\n",
-    "# Initialize query library\n",
-    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib = WarehouseProfile(connection, company, cache_dir)\n",
-    "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
-    "cqlib = CostProfile(connection, company, cache_dir, account_type)\n",
+    "# # Initialize query library\n",
+    "# from optiml.backend.warehouse_profile import WarehouseProfile\n",
+    "# wqlib = WarehouseProfile(connection, company, cache_dir)\n",
+    "# from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
+    "# cqlib = CostProfile(connection, company, cache_dir, account_type)\n",
     "\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
   {
@@ -121,6 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "delta = 'hour'\n",
     "wh_configs = wqlib.warehouse_config()\n",
     "wh_name = wh_configs[\"name\"].unique().tolist()\n",
     "wh_load = {}\n",
