--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -125,10 +125,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Queries executed per day - successes, failures, credits"
+    "## Failures"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total by day"
    ]
   },
   {
@@ -137,8 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qqlib.queries_by_execution_status(sdate,edate)\n",
-    "df.head()"
+    "df = qqlib.queries_stats_by_execution_status(sdate,edate)\n",
+    "# df.head()"
    ]
   },
   {
@@ -147,17 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_count = df.groupby(['day']).agg({'n_success': 'sum', 'n_fail': 'sum'}).reset_index()\n",
-    "df_count.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_credits = cqlib.credits_by_day(sdate, edate)"
+    "df_by_day = df.groupby(['day']).agg({'n_success': 'sum', 'n_fail': 'sum', 'credits_success': 'sum', 'credits_fail': 'sum'}).reset_index()\n"
    ]
   },
   {
@@ -167,28 +166,22 @@
    "outputs": [],
    "source": [
     "trace1 = go.Bar(\n",
-    "        x = df_count['day'],\n",
-    "        y = df_count['n_success'],\n",
-    "        name=\"Execution success count\",\n",
-    "    )\n",
-    "\n",
-    "trace2 = go.Bar(\n",
-    "        x = df_count['day'],\n",
-    "        y = df_count['n_fail'],\n",
+    "        x = df_by_day['day'],\n",
+    "        y = df_by_day['n_fail'],\n",
     "        name=\"Execution fail count\",\n",
     "    )\n",
     "\n",
-    "trace3  = go.Scatter(\n",
+    "\n",
+    "trace2  = go.Scatter(\n",
     "        mode='lines+markers',\n",
-    "        x = df_credits['date'],\n",
-    "        y = df_credits['credits'],\n",
+    "        x = df_by_day['day'],\n",
+    "        y = df_by_day['credits_fail'],\n",
     "        name=\"Credits\",\n",
     "        yaxis='y2',\n",
-    "        line=dict(color='black'),\n",
     "    )\n",
     "\n",
+    "data = [trace1, trace2]\n",
     "\n",
-    "data = [trace1, trace2, trace3]\n",
     "\n",
     "layout = go.Layout(\n",
     "    title_text='Query success, fail, credits per day',\n",
@@ -218,10 +211,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_success = sum(df_by_day['n_success'])\n",
+    "total_fail = sum(df_by_day['n_fail'])\n",
+    "pct_fail = round(total_fail/(total_fail + total_success) * 100,2)\n",
+    "credits_success = round(sum(df_by_day['credits_success']),2)\n",
+    "credits_fail = sum(df_by_day['credits_fail'])\n",
+    "pct_credits_fail = round(credits_fail/(credits_fail + credits_success) * 100,2)\n",
+    "print('Summary Stats: Credits and counts')\n",
+    "print('---------------------------------')\n",
+    "print('Number of queries that ran to success: ', total_success)\n",
+    "print('Number of queries that ran to failure: ', total_fail)\n",
+    "print('% failed queries: ', pct_fail)\n",
+    "print('Credits used by queries that ran to success: ', credits_success)\n",
+    "print('Credits used by queries that ran to failure: ', credits_fail)\n",
+    "print('% credits due to failed queries: ', pct_credits_fail)\n",
+    "print('Credits per successful query: ', round(credits_success/total_success,4))\n",
+    "print('Credits per failed query: ', round(credits_fail/total_fail,4))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query failures by user by day"
+    "### By warehouse by day"
    ]
   },
   {
@@ -230,9 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fail = df[df['execution_status'] == 'FAIL'].reset_index(drop=True)\n",
-    "df_fail_user = df_fail.groupby([\"user_name\",\"day\"]).sum(\"warehouse_name\").reset_index()\n",
-    "df_fail_user.head()"
+    "df_by_wh = df.groupby([\"warehouse_name\", \"day\"]).agg({'n_success': 'sum', 'n_fail': 'sum', 'credits_success': 'sum', 'credits_fail': 'sum'}).reset_index()"
    ]
   },
   {
@@ -241,8 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Failure time series by user\n",
-    "fig = px.bar(df_fail_user, x=\"day\", y=\"n_fail\", color=\"user_name\", title=\"Number failed by user\")\n",
+    "fig = px.bar(df_by_wh, x=\"day\", y=\"n_fail\", color=\"warehouse_name\", title=\"Number failed by warehouse\")\n",
     "fig.show()"
    ]
   },
@@ -252,31 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fail_user.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Top n users having most failed queries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n=10\n",
-    "df_top_failing_users = df_fail_user.groupby('user_name')['n_fail'].sum().reset_index()\n",
-    "df_top_failing_users.sort_values(\"n_fail\", ascending=False, inplace=True)\n",
-    "df_top_failing_users.reset_index(drop=True,inplace=True)\n",
-    "df_top_n_failing_users = df_top_failing_users.iloc[0:n-1]\n",
-    "df_top_n_failing_users.loc[len(df_top_n_failing_users.index)] = ['Others', df_top_failing_users.iloc[n-1:].sum().values[0]] \n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Pie(labels=df_top_n_failing_users['user_name'].tolist(), values=df_top_n_failing_users['n_fail'].tolist(),\n",
-    "                     rotation=-30, marker_colors=color_scheme, hole=0.3))\n",
+    "fig = px.bar(df_by_wh, x=\"day\", y=\"credits_fail\", color=\"warehouse_name\", title=\"Credits failed by warehouse\")\n",
     "fig.show()"
    ]
   },
@@ -284,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Failures by warehouse by day"
+    "### By user by day"
    ]
   },
   {
@@ -293,8 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fail_wh = df_fail.groupby([\"warehouse_name\",\"day\"]).sum(\"user_name\").reset_index()\n",
-    "df_fail_wh.head()"
+    "df_by_user = df.groupby([\"user_name\", \"day\"]).agg({'n_success': 'sum', 'n_fail': 'sum', 'credits_success': 'sum', 'credits_fail': 'sum'}).reset_index()"
    ]
   },
   {
@@ -303,15 +292,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(df_fail_wh, x=\"day\", y=\"n_fail\", color=\"warehouse_name\", title=\"Number failed by warehouse\")\n",
+    "fig = px.bar(df_by_user, x=\"day\", y=\"n_fail\", color=\"user_name\", title=\"Number failed by user\")\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(df_by_user, x=\"day\", y=\"credits_fail\", color=\"user_name\", title=\"Credits failed by user\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top 10 expensive failing queries of past week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expensive_queries_failed = qqlib.queries_by_execution_status(sdate,edate,'FAIL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Query details for top 20 expensive failing queries')\n",
+    "print('-------------------------------------------------')\n",
+    "for n in range(0,20):\n",
+    "    if n < len(df_expensive_queries_failed):\n",
+    "        # print()\n",
+    "        print('Query id:', df_expensive_queries_failed.iloc[n][\"query_id\"])\n",
+    "        print('User name:', df_expensive_queries_failed.iloc[n][\"user_name\"])\n",
+    "        print('Warehouse name:', df_expensive_queries_failed.iloc[n][\"warehouse_name\"])\n",
+    "        print('Query credits:', df_expensive_queries_failed.iloc[n][\"credits\"])\n",
+    "        print('Query text snippet:', df_expensive_queries_failed.iloc[n][\"query_text\"][0:75],'...')\n",
+    "        print('---------------------------------------------------------------------------------------------------')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Top n warehouses having most failed queries"
+    "## Expensive queries"
    ]
   },
   {
@@ -320,8 +355,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_top_failing_wh = df_fail_wh.groupby([\"warehouse_name\"])[\"n_fail\"].sum().reset_index()\n",
-    "df_top_failing_wh"
+    "metric = 'credits'\n",
+    "df_v2 = qqlib.n_inefficient_queries_v2(sdate,edate,10,metric=metric)\n",
+    "df_v2.head()"
    ]
   },
   {
@@ -330,17 +366,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Pie(labels=df_top_failing_wh['warehouse_name'].tolist(), values=df_top_failing_wh['n_fail'].tolist(),\n",
-    "                     rotation=-30, marker_colors=color_scheme, hole=0.3))\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Query details of failed queries"
+    "# metric = 'bytes_scanned'\n",
+    "# metric = 'percentage_scanned_from_cache'\n",
+    "# metric = 'bytes_spilled_to_local_storage'\n",
+    "# metric = 'bytes_spilled_to_remote_storage' -- division by 0\n",
+    "# metric = 'percentage_partitions_scanned' -- division by 0\n",
+    "# metric = 'partitions_total'\n",
+    "# metric = 'compilation_time_sec' #-- division by 0\n",
+    "# metric = 'execution_time_sec'\n",
+    "# metric = 'queued_provisioning_time_sec' -- division by 0\n",
+    "# metric = 'queued_repair_time_sec' -- division by 0\n",
+    "# metric = 'queued_overload_time_sec' -- division by 0\n",
+    "# metric = 'list_external_files_time_sec' -- division by 0\n",
+    "# metric = 'total_time_elapsed_sec'\n",
+    "metric = 'credits'\n",
+    "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
+    "df.head()"
    ]
   },
   {
@@ -349,12 +390,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 17th Aug DEV_WH execution_status fail anomaly\n",
-    "df=qqlib.get_queries(start_date=\"2022-08-17\",end_date=\"2022-08-18\",wh=\"DEV_WH\",es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.get_unique_queries(df)\n",
-    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
+    "df_unique = qqlib.get_unique_queries_with_metrics_ordered(df, metric)\n",
     "df_unique.reset_index(inplace=True)\n",
-    "df_unique.head()"
+    "df_unique.head(20)"
    ]
   },
   {
@@ -363,12 +401,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 3rd Oct DEV_WH execution_status fail anomaly\n",
-    "df=qqlib.get_queries(start_date=\"2022-10-03\",end_date=\"2022-10-04\",wh=\"DEV_WH\",es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.get_unique_queries(df)\n",
-    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
-    "df_unique.reset_index(inplace=True)\n",
-    "df_unique.head()"
+    "n = 20\n",
+    "trace1 = go.Bar(\n",
+    "        x = df_unique.iloc[0:n]['query_hash'],\n",
+    "        y = df_unique.iloc[0:n]['n_success'],\n",
+    "        name=\"Execution success count\",\n",
+    "    )\n",
+    "\n",
+    "trace2 = go.Bar(\n",
+    "        x = df_unique.iloc[0:n]['query_hash'],\n",
+    "        y = df_unique.iloc[0:n]['n_fail'],\n",
+    "        name=\"Execution fail count\",\n",
+    "    )\n",
+    "\n",
+    "trace3  = go.Scatter(\n",
+    "        mode='markers+lines',\n",
+    "        x = df_unique.iloc[0:n]['query_hash'],\n",
+    "        y = df_unique.iloc[0:n][metric],\n",
+    "        name=metric,\n",
+    "        yaxis='y2',\n",
+    "        line=dict(color='black'),\n",
+    "    )\n",
+    "\n",
+    "data = [trace1, trace2, trace3]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title_text='Query count',\n",
+    "    yaxis=dict(\n",
+    "        title=\"Count number\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "     yaxis2=dict(\n",
+    "        title=metric, \n",
+    "        overlaying=\"y\",\n",
+    "        side=\"right\",\n",
+    "        showgrid=False,\n",
+    "    ),\n",
+    "    xaxis=dict(\n",
+    "        title=\"Date (UTC)\"\n",
+    "    ),\n",
+    "    legend=dict(\n",
+    "        yanchor=\"top\",\n",
+    "        y=0.99,\n",
+    "        xanchor=\"right\",\n",
+    "        x=0.99\n",
+    "    ),\n",
+    "    barmode=\"stack\"\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig.update_yaxes(rangemode=\"tozero\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -377,13 +459,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 11th Oct Unassigned execution_status fail anomaly\n",
-    "df=qqlib.get_queries(start_date=\"2022-10-11\",end_date=\"2022-10-12\",es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.get_unique_queries(df)\n",
-    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
-    "df_unique.reset_index(inplace=True)\n",
-    "df_unique.head()"
+    "df_unique.iloc[17]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
