--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -95,10 +95,10 @@
     "import datetime \n",
     "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
     "# sdate = edate - datetime.timedelta(days=6)\n",
-    "# edate = datetime.datetime.strptime('2022-10-04', '%Y-%m-%d').date()\n",
-    "# sdate = datetime.datetime.strptime('2022-09-29', '%Y-%m-%d').date()\n",
-    "edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
-    "sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
+    "edate = datetime.datetime.strptime('2022-10-04', '%Y-%m-%d').date()\n",
+    "sdate = datetime.datetime.strptime('2022-09-29', '%Y-%m-%d').date()\n",
+    "# edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
+    "# sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
     "# edate = str(edate)\n",
     "# sdate = str(sdate)\n",
     "\n",
@@ -488,10 +488,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cost by Partner Tools\n"
+    "## Cost by partner tools\n"
    ]
   },
   {
@@ -677,6 +678,108 @@
     "    \n",
     "</div>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Warehouse profiling"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Warehouse efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta = 'hour'\n",
+    "df = wqlib.wh_load_and_efficiency(start_date=sdate,end_date=edate,delta=delta)\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wh_name = df[\"warehouse_name\"].unique()\n",
+    "\n",
+    "for n in wh_name:\n",
+    "    df_wh = df[df[\"warehouse_name\"] == n]\n",
+    "    trace1 = go.Bar(\n",
+    "            x=df_wh[\"hourly_start_time\"], y=df_wh[\"avg_queued_load\"],\n",
+    "            name='Average Queued Load',marker=dict(color='rgb(222,0,0)')\n",
+    "        )\n",
+    "    trace2 = go.Bar(\n",
+    "        x=df_wh[\"hourly_start_time\"], y=df_wh[\"avg_running_load\"],\n",
+    "        name='Average Running load',marker=dict(color='rgb(0,0,255)')\n",
+    "    )\n",
+    "    trace3 = go.Scatter(\n",
+    "        x=df_wh['hourly_start_time'] ,y=df_wh['avg_credits'],\n",
+    "        name='Average Credits', mode='lines+markers',\n",
+    "    )\n",
+    "\n",
+    "    trace4 = go.Scatter(\n",
+    "        x=df_wh['hourly_start_time'] ,y=df_wh['avg_efficiency'],\n",
+    "        name='Average Efficiency', mode='lines+markers',\n",
+    "    )\n",
+    "\n",
+    "    f = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "    g = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "\n",
+    "    # f = make_subplots(rows=2, cols=2,\n",
+    "    #                 specs=[[{\"secondary_y\": True}, {\"secondary_y\": True}],\n",
+    "    #                        [{\"secondary_y\": True}, {\"secondary_y\": True}]])\n",
+    "    \n",
+    "    f.add_trace(trace1, secondary_y=False)\n",
+    "    f.add_trace(trace2, secondary_y=False)\n",
+    "    f.update_layout(barmode='stack')\n",
+    "    f.add_trace(trace3, secondary_y=True)\n",
+    "    f.update_layout(\n",
+    "        xaxis_title=\"Hourly start time (UTC)\",\n",
+    "        title=n,\n",
+    "        xaxis=dict(showgrid=False),\n",
+    "        yaxis=dict(showgrid=False)\n",
+    "    )\n",
+    "    f.update_yaxes(title_text=\"Query Load\", secondary_y=False)\n",
+    "    f.update_yaxes(title_text=\"Credits\", secondary_y=True)\n",
+    "    f.update_yaxes(rangemode=\"tozero\", secondary_y=True)\n",
+    "    \n",
+    "    g.add_trace(trace1, secondary_y=False)\n",
+    "    g.add_trace(trace2, secondary_y=False)\n",
+    "    g.update_layout(barmode='stack')\n",
+    "    g.add_trace(trace4, secondary_y=True)\n",
+    "    g.update_layout(\n",
+    "        xaxis_title=\"Hourly start time (UTC)\",\n",
+    "        title=n,\n",
+    "        xaxis=dict(showgrid=False),\n",
+    "        yaxis=dict(showgrid=False)\n",
+    "    )\n",
+    "    g.update_yaxes(title_text=\"Query Load\", secondary_y=False)\n",
+    "    g.update_yaxes(title_text=\"Efficiency\", secondary_y=True)\n",
+    "    g.update_yaxes(rangemode=\"tozero\", secondary_y=True)\n",
+    "    \n",
+    "\n",
+    "    f.show()\n",
+    "    g.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
