--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -95,11 +95,9 @@
     "# Initialize dates\n",
     "import datetime \n",
     "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
-    "# sdate = edate - datetime.timedelta(days=8)\n",
-    "# edate = str(edate)\n",
-    "# sdate = str(sdate)\n",
-    "edate = '2022-10-12'\n",
-    "sdate = '2022-10-05'\n",
+    "# sdate = edate - datetime.timedelta(days=6)\n",
+    "edate = datetime.datetime.strptime('2022-10-12', '%Y-%m-%d').date()\n",
+    "sdate = datetime.datetime.strptime('2022-10-05', '%Y-%m-%d').date()\n",
     "print('Customer:', customer)\n",
     "print('Schema:', schema)\n",
     "print(str(sdate), str(edate))"
@@ -125,7 +123,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +130,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,7 +180,7 @@
     "\n",
     "\n",
     "layout = go.Layout(\n",
-    "    title_text='Query success, fail, credits per day',\n",
+    "    title_text='Query fails and credits per day',\n",
     "    yaxis=dict(\n",
     "        title=\"Count number\",\n",
     "        showgrid=False,\n",
@@ -307,7 +303,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -474,7 +469,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -511,7 +505,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -563,7 +556,7 @@
    "outputs": [],
    "source": [
     "df[\"percent_usage\"] = df[\"n_query_type\"]/sum(df[\"n_query_type\"])*100\n",
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
@@ -581,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_low_usage_queries"
+    "# df_low_usage_queries"
    ]
   },
   {
@@ -591,7 +584,7 @@
    "outputs": [],
    "source": [
     "df = df[df[\"percent_usage\"] > 1.00].reset_index(drop=True)\n",
-    "df.tail()"
+    "# df.tail()"
    ]
   },
   {
@@ -605,7 +598,7 @@
     "                    \"percent_usage\": sum(df_low_usage_queries[\"percent_usage\"])\n",
     "                    }, index=[0])\n",
     "df = df.append(df2, ignore_index=True)\n",
-    "df"
+    "# df"
    ]
   },
   {
@@ -636,6 +629,13 @@
     "        'yanchor': 'bottom'})\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
