--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -315,7 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_expensive_queries_failed = qqlib.queries_by_execution_status(sdate,edate,'FAIL')"
+    "df_expensive_queries_failed = qqlib.queries_by_execution_status(sdate,edate,'FAIL')\n",
+    "df_expensive_queries_failed.head()"
    ]
   },
   {
@@ -326,7 +327,7 @@
    "source": [
     "df_unique_fail = qqlib.get_unique_failed_queries_with_metrics_ordered(df_expensive_queries_failed, 'credits')\n",
     "df_unique_fail.reset_index(inplace=True)\n",
-    "# df_unique_fail.head(20)"
+    "df_unique_fail.head(20)"
    ]
   },
   {
